--- a/style.css
+++ b/style.css
@@ -90,11 +90,18 @@ outline:none;
     border-radius: 0.25rem;
     font-size:var(--small-font-size)
 }
+.grid{
+    display: grid;
+    gap:1.5rem;
+}
+.section--lg{
+    padding-block:3.5rem;
+}
 /*=====HEADER AND NAV====*/
 .header__top{
     background-color: var(--first-color-alt);
     border-bottom:1px solid var(--first-color);
-    padding-block: 0.875rem;
+    padding-block: 0.20rem;
 }
 .header__container{
     display: flex;
@@ -125,7 +132,7 @@ outline:none;
 }
 .nav{
    
-    height:calc(var(--header-height) + 2.5rem);
+    height:calc(var(--header-height) + 1.5rem);
     justify-content:space-between;
     column-gap: 1rem;
 }
@@ -186,7 +193,55 @@ outline:none;
     color:var(--first-color)
 }
 /*=====HOME====*/
+.home__container {
+    grid-template-columns: 5fr 7fr;
+    align-items: center;
+}
+.home__subtitle,
+.home__description{
+    font-size:var(--large-font-size)
+}
+.home__subtitle{
+    font-family: var(--second-color);
+    font-weight: var(--weight-600);
+    margin-bottom: 1rem;
+    display: block;
+}
+.home__title{
+    font-size:var(--h1-font-size);
+    font-weight: var(--weight-700);
+    line-height: 1.2;
+}
+.home__title span{
+    color:var(--first-color);
+    font-size: var(--big-font-size);
+}
+.home__description{
+    margin-block: .5rem 2rem;
+}
+.home__img{
+    justify-self: flex-end;
+}
+
 /*=====BUTTONS====*/
+.btn{
+    display: inline-block;
+    background-color: var(--first-color);
+    border:2px solid var(--first-color);
+    color:var(--body-color);
+    padding-inline:1.75rem;
+    height:40px;
+    line-height: 40px;
+    border-radius:.25rem;
+    font-family: var(--secound-font);
+    font-size:var(--small-font-size);
+    font-weight: var(--weight-700);
+    transition: all 0.4s var(--transition);
+}
+.btn:hover{
+    background-color:transparent;
+    color:var(--first-color)
+}
 /*=====CATEGORIES====*/
 /*=====BASE====*/
 /*=====BASE====*/
