--- a/style.css
+++ b/style.css
@@ -229,7 +229,7 @@ outline:none;
     font-size:var(--large-font-size)
 }
 .home__subtitle{
-    font-family: var(--second-color);
+    font-family: var(--secound-font);
     font-weight: var(--weight-600);
     margin-bottom: 1rem;
     display: block;
@@ -268,6 +268,11 @@ outline:none;
 .btn:hover{
     background-color:transparent;
     color:var(--first-color)
+}
+.btn--md{
+    font-family: var(--body-font);
+    height: 45px;
+    line-height: 42px;
 }
 /*=====CATEGORIES====*/
 .categories{
@@ -535,7 +540,84 @@ opacity: 1;
 .product__item:hover .product__img.default {
     opacity: 0;
 }
-/*=====BASE====*/
+/*=====deals====*/
+.deals__container{
+    grid-template-columns: repeat(2,1fr);
+}
+.deals__item:nth-child(1){
+   background-image: url(/images/deals-1.jpg);
+}
+.deals__item:nth-child(2){
+    background-image: url(./images//deals-2.png);
+}
+.deals__item{
+    padding:3rem;
+    background-size:cover;
+    background-position: center;
+    display: flex;
+    flex-direction: column;
+    row-gap:1.5rem;
+}
+.deals__brand{
+    color:var(--first-color);
+    font-size:var(--h3-font-size);
+    margin-bottom:.25rem;
+}
+.deals__category{
+    font-family:var(--secound-font);
+    font-size:var(--small-font-size);
+}
+.deals__title{
+   max-width:240px;
+   font-size:var(--large-font-size);
+   font-weight: var(--weight-400);
+   line-height:1.3;
+}
+.deals_price .new__price,
+.deals_price .old__price{
+   font-size:var(--large-font-size);
+}
+.deals_price .new__price{
+    color:hsl(352,100%,60%)
+}
+.deals__countdown-text{
+    margin-bottom:0.25rem;
+}
+.countdown{
+    display: flex;
+    column-gap:1.5rem;
+}
+.countdown__amount{
+    position: relative;
+}
+.countdown__amount::after{
+    content:':';
+    color:var(--title-color);
+    font-size:var(--large-font-size);
+    position:absolute;
+    right:-25%;
+    top:20%;
+}
+.countdown__period{
+    background-color: var(--first-color);
+    color:var(--body-color);
+    width:60px;
+    height:50px;
+    line-height: 50px;
+    text-align: center;
+    border-radius:.25rem;
+    font-weight: var(--weight-600);
+    margin-bottom:.5rem;
+}
+.unit{
+    font-size:var(--small-font-size);
+    text-align: center;
+    display: block;
+}
+.deals__btn .btn{
+    background-color: transparent;
+    color:var(--first-color)
+}
 /*=====BASE====*/
 /*=====BASE====*/
 /* 1. Fix the Image Transition */
