--- a/style.css
+++ b/style.css
@@ -622,7 +622,48 @@ opacity: 1;
 .new__arrivals{
     overflow: hidden;
 }
-/*=====BASE====*/
+/*=====showcase====*/
+.showcase__container{
+    grid-template-columns: repeat(4,1fr);
+}
+.showcase_wrapper .section__title{
+  font-size:var(--normal-font-size);
+  border-bottom: 1px solid --border-color-alt;
+  padding-bottom:.75rem;
+  margin-bottom: 2rem;
+  position: relative;
+}
+.showcase_wrapper .section__title::before{
+    content:'';
+    position: absolute;
+    left:0;
+    bottom:-1.3px;
+    width:50px;
+    height:2px;
+    background-color: var(--first-color);
+}
+.showcase__item{
+    display: flex;
+    align-items: center;
+    column-gap: 1.5rem;
+}
+.showcase__item:not(:last-child){
+    margin-bottom: 1.5rem;
+}
+.showcase__img{
+    width: 86px;
+}
+.showcase__content{
+    width:calc(100% - 110px)
+}
+.showcase__title{
+    font-size:var(--small-font-size);
+    font-weight: var(--weight-500);
+    white-space:nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    margin-bottom: 0.5rem;
+}
 /*=====BASE====*/
 /* 1. Fix the Image Transition */
 
