--- a/style.css
+++ b/style.css
@@ -367,7 +367,30 @@ outline:none;
     color:var(--first-color);
     background-color:var(--second-color)
 }
-/* //product-section */
+.category__item{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding:1.5rem;
+    border:1px solid var(--border-color);
+    border-radius: 1.2rem ;
+    background-color: var(--body-color);
+    transition: all 0.3s var(--transition);
+}
+.category__img {
+    width: 100%; 
+    height: 120px;
+    object-fit: contain;
+    margin-bottom: 1rem;
+    display: block;
+}
+
+.category__title {
+    font-size: var(--small-font-size);
+    color: var(--title-color);
+    text-align: center;
+}
+
 .product__container{
     grid-template-columns: repeat(4,1fr);
 }
@@ -397,6 +420,23 @@ outline:none;
     border: 1px solid var(--border-color);
     border-radius: 1.5rem;
     transition: all .2s var(--transition);
+}
+.product__main-images{
+    display: block;
+    height: 250px;
+    width: 100%;
+    position: relative;
+    overflow: hidden;
+    background-color: var(--container-color);
+}
+.product__main-img{
+    width: 100%;
+    height: 100%;
+    object-fit: contain; 
+    padding: 1rem;      
+    position: absolute;
+    top: 0;
+    left: 0;
 }
 .product__img{
     vertical-align: middle;
@@ -722,6 +762,65 @@ opacity: 1;
 }
 .newsletter__btn:hover{
     background-color:var(--first-color)
+}
+/* footer-section */
+.footer__container{
+    grid-template-columns: 4.5fr repeat(2,2fr) 3.5fr;
+    padding-block:2.5rem;
+}
+.footer__subtitle{
+    color:var(--text-color-light);
+    font-size:var(--small-font-size);
+    margin-block:1.25rem 0.625rem;
+}
+.footer__description{
+    margin-bottom:0.25rem;
+}
+.footer__logo-img{
+    width:120px;
+}
+.footer__description span{
+    font-weight: var(--weight-600);
+}
+.footer__social .footer__subtitle{
+    margin-top:1.875rem;
+}
+.footer__social-links{
+    column-gap: 0.25rem;
+}
+#footer-icon-flex{
+    display: flex;
+    column-gap: 10px;
+}
+#footer-icon-flex .social-icon{
+    width:24px;
+}
+.footer__title{
+    font-size:var(--large-font-size);
+    margin-block:1rem 1.25rem;
+}
+.footer__link{
+    color:var(--title-color);
+    font-family:var(--body-font);
+    font-size:var(--small-font-size);
+    margin-bottom:1rem;
+    display: block;
+    transition: all .3s --transition;
+}
+.footer__link:hover{
+    color:var(--first-color);
+    margin-left:0.25rem;
+}
+.footer__bottom{
+    display: flex;
+    justify-content: space-between;
+    padding-block: 1rem;
+    border-top:1px solid --border-color-alt
+}
+.copyright,
+.designer{
+    color:var(--text-color-light);
+    font-size:var(--small-font-size)
 }
 /*=====BASE====*/
 /* 1. Fix the Image Transition */
