details section added

--- a/style.css
+++ b/style.css
@@ -269,10 +269,18 @@ outline:none;
     background-color:transparent;
     color:var(--first-color)
 }
+.btn--md,
+.btn--sm{
+    font-family:var(--body-font)
+}
 .btn--md{
     font-family: var(--body-font);
     height: 45px;
     line-height: 42px;
+}
+.btn--sm{
+    height: 40px;
+    line-height: 36px;
 }
 /*=====CATEGORIES====*/
 .categories{
@@ -863,7 +871,157 @@ transform: translateY(1rem);
     transform: translateY(0rem);
 }
 }
-/* 1. Fix the Image Transition */
+/* breadcrumb */
+.breadcrumb{
+    background-color:var(--container-color);
+    padding-block: 1rem;
 
+}
+.breadcrumb__list{
+    column-gap: .75rem;
+}
+.breadcrumb__link{
+   color:var(--text-color);
+   font-size:var(--small-font-size)
+}
+/* shop section */
+.total__products{
+    margin-bottom:2.5rem;
+}
+.total__products span{
+    color:var(--first-color);
+    font-weight: var(--weight-600);
+}
+.pagination{
+    display: flex;
+    column-gap: .625rem;
+    margin-top:2.75rem;
+}
+.pagination__link{
+    display: inline-block;
+    width:34px;
+    height:34px;
+    line-height: 34px;
+    text-align: center;
+    border-radius: .25rem;
+    color:var(--text-color);
+    font-size:var(--small-font-size);
+    font-weight: var(--weight-700);
+    transition: all 0.15s var(--transition);
 
-/* 4. Ensure the Hover Image is visible and stays in place */
+}
+.pagination__link.active,
+.pagination__link:hover{
+  background-color: var(--first-color);
+  color:var(--body-color)
+}
+/* details */
+.details__container{
+    padding-block:2rem;
+    grid-template-columns: 5.5fr 6.5fr;
+    align-items: center;
+}
+.details__img{
+    margin-bottom:0.5rem;
+}
+.details__small-images{
+    grid-template-columns: repeat(4,1fr);
+    column-gap: .625rem;
+}
+.details__small-img{
+    cursor:pointer
+}
+.details__title{
+    font-size:var(--h2-font-size);
+}
+.details__brand{
+    font-size:var(--small-font-size);
+    margin-block:0.8rem;
+}
+.details__brand span{
+    color:var(--first-color);
+    font-family: var(--secound-font);
+}
+.details__price{
+    border-top:1px solid var(--border-color-alt);
+    border-bottom:1px solid var(--border-color-alt);
+    padding-block:0.6rem;
+    column-gap: 1rem;
+
+}
+.details__price .new__price{
+    font-size:var(--h2-font-size)
+}
+.details__price .old__price{
+    font-size:var(--normal-font-size);
+    font-weight:var(--weight-600)
+}
+.short__description{
+    margin-block:0.2rem 2rem;
+}
+.list-item,
+.meta__list{
+    font-size:var(--small-font-size);
+    margin-bottom:0.5rem;
+}
+.details__color,
+.details__size{
+    column-gap: .75rem;
+}
+.details__color{
+    margin-block:2rem 1.5rem;
+}
+.details__size{
+    margin-bottom:2.5rem;
+}
+.details__color-title,
+.details__size-title{
+font-size:var(--small-font-size);
+font-weight: var(--weight-600);
+}
+.color__list,
+.size__list{
+    display: flex;
+    column-gap: 0.25rem;
+}
+.color__link{
+    width:26px;
+    height: 26px;
+    border-radius: 50%;
+    display: inline-block;
+}
+.size__link{
+    border:1px solid var(--border-color-alt);
+    padding:.375rem .75rem 0.5rem;
+    color:var(--text-color);
+    font-size:var(--small-font-size);
+}
+.size-active{
+    background-color: var(--first-color);
+    color:var(--body-color)
+}
+.details-action{
+    display: flex;
+    column-gap: .375rem;
+    margin-bottom:3.25rem;
+}
+.quantity,
+.details__action-btn{
+    border:1px solid var(--border-color);
+    font-size:var(--small-font-size)
+}
+.quantity{
+    max-width:80px;
+    padding-block:.5rem;
+    padding-inline:1rem 0.5rem;
+    border-radius: .25rem;
+}
+.details__action-btn{
+    color:var(--text-color);
+    line-height: 40px;
+    padding-inline:0.75rem;
+}
+.details__meta{
+    border-top:1px solid var(--border-color-alt);
+    padding-top:0.2rem;
+}
