product details review and comments added

--- a/style.css
+++ b/style.css
@@ -77,6 +77,10 @@ background-color: transparent;
 border:none;
 outline:none;
 }
+table{
+    width:100%;
+    border-collapse: collapse;
+}
 /*=====REUSEABLE CSS CLASSES====*/
 .container{
     max-width: 1100px;
@@ -123,6 +127,19 @@ outline:none;
 }
 .product__price .new__price{
     font-size: var(--large-font-size);
+}
+.form{
+    row-gap: 1rem;
+}
+.form__group{
+    grid-template-columns: repeat(2,1fr);
+    gap:1rem;
+}
+.textarea{
+    height:200px;
+    padding-block:1rem;
+    resize:none;
+    
 }
 /*=====HEADER AND NAV====*/
 .header__top{
@@ -1062,4 +1079,90 @@ font-weight: var(--weight-600);
 .details__meta{
     border-top:1px solid var(--border-color-alt);
     padding-top:0.2rem;
+}
+/* details and info and reviews */
+.detail__tabs{
+    display: flex;
+    column-gap: 1.75rem;
+    margin-bottom: 3rem;
+}
+.detail__tab{
+    font-family: var(--second-font);
+    font-size:var(--large-font-size);
+    font-weight: var(--weight-600);
+    cursor:pointer;
+}
+.detail__tab.active-tab{
+    color:var(--first-color);
+
+}
+.details__tab-content:not(.active-tab){
+    display: none;
+}
+.info__table tr th,
+.info__table tr td{
+    border:1px solid var(--border-color-alt);
+    padding:0.625rem 1.2rem;
+}
+.info__table tr th{
+    font-weight: var(--weight-500);
+    text-align: left;
+}
+.info__table tr td{
+    color:var(--text-color-light)
+}
+.reviews__container{
+    padding-bottom:3rem;
+    row-gap: 1.25rem;
+}
+.review__single{
+    border-bottom:1px solid var(--border-color-alt);
+    padding-bottom: 1.25rem;
+    display: flex;
+    align-items: flex-start;
+    column-gap: 1.5rem;
+}
+.review__single:last-child{
+    padding-bottom:3rem;
+}
+.review__img{
+    width:70px;
+    border-radius: 50%;
+    margin-bottom:0.5rem;
+}
+.review__title{
+    font-size:var(--tiny-font-size);
+
+}
+.review__data{
+    width:calc(100% - 94px);
+}
+.review__description{
+    margin-bottom:0.5rem;
+}
+.review__rating{
+    color:hsl(42,100%,50%);
+    margin-bottom:0.25rem;
+}
+.review__rating,
+.review__date{
+    font-size:var(--small-font-size);
+}
+.review__form-title{
+    font-size:var(--large-font-size);
+    margin-bottom: 1rem;
+}
+.rate__product{
+    margin-bottom:2rem;
+}
+.form{
+    row-gap:1rem;
+}
+.form__group{
+    
+    grid-template-columns: repeat(2,1fr);
+    gap:1rem;
+}
+.form-input textarea{
+    border:1px solid (--border-color)
 }
