--- a/style.css
+++ b/style.css
@@ -1217,10 +1217,12 @@ font-weight: var(--weight-600);
 .table__description,
 .table__price,
 .table__subtotal,
-.table__trash{
+.table__trash,
+.table__stock{
     font-size:var(--small-font-size);
 }
-.table__title{
+.table__title,
+.table__stock{
     color:var(--first-color);
 }
 .table__description{
@@ -1298,4 +1300,8 @@ font-weight: var(--weight-600);
     display: flex;
     align-items: center;
     column-gap: .5rem;
+}
+.qty-input{
+    width:50px;
+    border:1px solid var(--border-color)
 }
