--- a/style.css
+++ b/style.css
@@ -1310,3 +1310,14 @@ font-weight: var(--weight-600);
     width:50px;
     border:1px solid var(--border-color)
 }
+/* Login & Register */
+.login-register__container{
+    grid-template-columns: repeat(2,1fr);
+    align-items: flex-start;
+}
+.login,
+.register{
+    border:1px solid var(--border-color-alt);
+    padding:2rem;
+    border-radius:0.5rem;
+}
