--- a/style.css
+++ b/style.css
@@ -1310,6 +1310,30 @@ font-weight: var(--weight-600);
     width:50px;
     border:1px solid var(--border-color)
 }
+.table__quantity,
+.order__subtitle{
+    font-size:var(--small-font-size)
+}
+.order__grand-total{
+    color:var(--first-color);
+    font-size:var(--large-font-size);
+    font-weight: var(--weight-700);
+}
+.payment__methods{
+    margin-block:2.5rem 2.75rem;
+}
+.payment__title{
+    margin-bottom: 1.5rem;
+}
+.payment__option{
+    margin-bottom: 1rem;
+}
+.payment__input{
+    accent-color: var(--first-color);
+}
+.payment__label{
+    font-size:var(--small-font-size)
+}
 /* Login & Register */
 .login-register__container{
     grid-template-columns: repeat(2,1fr);
@@ -1320,4 +1344,54 @@ font-weight: var(--weight-600);
     border:1px solid var(--border-color-alt);
     padding:2rem;
     border-radius:0.5rem;
+}
+/* checkout html */
+.checkout__container{
+    grid-template-columns: repeat(2,1fr);
+}
+.checkout__group:nth-child(2){
+    border:1px solid var(--border-color-alt);
+    padding:2rem;
+    border-radius: 0.5rem;
+}
+.checkout__group .section__title{
+    font-size: var(--large-font-size);
+}
+.product-title-checkout{
+    font-size:var(--small-font-size);
+}
+.order__img{
+    width:80px;
+}
+.order__table tr th,
+.order__table tr td{
+    border:1px solid var(--border-color-alt);
+    padding:.5rem;
+    text-align: center;
+}
+.order__table tr th{
+    color:var(--title-color);
+    font-size:var(--small-font-size)
+}
+.product-image-checkout{
+   width:40px;
+   height: 100%;
+}
+.product-quantity-checkout{
+    font-size:var(--small-font-size);
+    font-weight:var(--weight-400);
+    color:var(--body-font)
+}
+.product-title-checkout{
+    font-size:var(--normal-font-size);
+    font-weight: var(--weight-500);
+    color:var(--first-color)
+}
+.product-section-textBox{
+    padding-block: 2rem!important;
+}
+.product-total-checkout{
+    font-size:var(--normal-font-size);
+    font-weight:var(--weight-500);
+    color:var(--text-color);
 }
