--- a/style.css
+++ b/style.css
@@ -192,16 +192,8 @@ table{
     font-weight: var(--weight-700);
     transition:all 0.2s var(--transition);
 }
-.header__search{
-    width:340px;
-    position: relative;
-}
-.search__btn{
-    position: absolute;
-    top:24%;
-    right:1.25rem;
-    cursor: pointer;
-}
+
+
 .header__user-actions{
     column-gap: 2rem;
 }
@@ -211,10 +203,10 @@ table{
 .header__action-btn img{
     width:24px;
 }
-.header__search .form__input{
+/* .header__search .form__input{
     
     width:100%;
-}
+} */
 .header__action-btn .count{
     position: absolute;
     top:-0.625rem;
@@ -232,6 +224,10 @@ table{
     font-size:.8rem;
     text-align: center;
     font-weight: 500;
+}
+.nav__menu-top,
+.nav__toggle{
+    display: none;
 }
 .active-link,
 .nav__link:hover{
@@ -375,6 +371,7 @@ table{
 /* products-section */
 .tab__btns{
     display: flex;
+    flex-wrap: wrap;
     column-gap: 0.75rem;
     margin-bottom:2rem;
 }
@@ -762,6 +759,7 @@ opacity: 1;
     font-family: var(--secound-font);
     font-size:var(--small-font-size);
     font-weight: var(--weight-600);
+    text-align: center;
 }
 .newsletter__form{
     display: flex;
@@ -792,6 +790,9 @@ opacity: 1;
     background-color:var(--first-color)
 }
 /* footer-section */
+#footer__container{
+     padding-block:0rem;
+}
 .footer__container{
     grid-template-columns: 4.5fr repeat(2,2fr) 3.5fr;
     padding-block:2.5rem;
@@ -1237,6 +1238,7 @@ font-weight: var(--weight-600);
 .cart__actions{
     display: flex;
     justify-content: flex-end;
+    flex-wrap: wrap;
     gap:.75rem;
     margin-top:1.5rem;
 }
@@ -1580,7 +1582,7 @@ font-weight: var(--weight-600);
     border: 1px solid #e1e1e1;
     border-radius: 10px;
     overflow: hidden;
-    width: 280px; 
+    max-width: 280px; 
     height: 380px;
     display: flex;
     flex-direction: column;
@@ -1662,7 +1664,7 @@ font-weight: var(--weight-600);
 
 .close-icon:hover {
     transform: rotate(90deg) !important;
-    color: red; /* বোঝার সুবিধার্থে কালার যোগ করা হয়েছে */
+    color: red; 
 }
 
 /* Show the box when active */
@@ -1675,10 +1677,339 @@ font-weight: var(--weight-600);
     padding-block: 0.8rem;
     display: block;
 }
-@media screen and (max-width: 768px) {
-    .compare__table {
+.search__btn{
+    position: absolute;
+    right:10px;
+}
+@media screen and (max-width: 1400px){
+    .container{
+        max-width:1140px;
+    }
+    
+}
+@media screen and (max-width: 900px){
+    .product__container,
+    .showcase__container,
+    #product__related-section{
+        grid-template-columns: repeat(3,1fr);
+    }
+    .accounts__container{
+        grid-template-columns: 3fr 9fr;
+    }
+
+}
+@media screen and (max-width: 1100px){
+    .container{
+        max-width:950px;
+    }
+    :root{
+     --big-font-size:2.25rem;
+    --h1-font-size:2rem;
+    --h2-font-size:1.375rem;
+    --h3-font-size:1.25rem;
+    --h4-font-size:1.125rem;
+    --large-font-size:1rem;
+    --normal-font-size:0.9375rem;
+    --small-font-size:0.8125rem;
+    --smaller-font-size:0.68rem;
+    --tiny-font-size:0.625rem;
+    }
+   .header__top{
+    display: none;
+   }
+   .nav {
+    height: calc(var(--header-height) + 1.1rem);
+    
+}
+   .nav__logo-img{
+    width: 116px;
+   }
+    .nav__menu{
+        position: fixed;
+        right:-100%;
+        top:0;
+        max-width: 400px;
+        width:100%;
+        height:100%;
+        padding:1.25rem 2rem;
+        background-color: var(--body-color);
+        z-index: 100;
+        flex-direction: column;
+        text-align: flex-start;
+        row-gap:2rem;
+        box-shadow: 0 0 15px hsla(0 ,0%,0%,0.1);
+        transition: all .25s var(--transition);
+    }
+    .nav__list{
+        order:1;
+        flex-direction: column;
+        align-items: flex-start;
+        row-gap: 1.5rem;
+    }
+    .show-menu{
+        right:0;
+    }
+    .nav__link{
+        font-size:var(--large-font-size)
+    }
+    .header__search{
+        border-color:var(--first-color)
+    }
+    .nav__menu-top,
+    .nav__toggle{
+        display: flex;
+    }
+    .nav__menu-top{
+        align-items: center;
+        justify-content: space-between;
+        width:100%;
+        margin-bottom:1.25rem;
+
+    }
+    .nav__menu-logo img{
+        width:100px;
+    }
+    .nav__close{
+        font-size: var(--h2-font-size);
+        line-height: 1rem;
+    }
+    .header__action-btn img{
+        width:21px;
+    }
+    .home__container{
+        grid-template-columns: 5.5fr 6.5fr;
+    }
+    .countdown{
+        column-gap: 1rem;
+    }
+    .countdown__period{
+        width: 36px;
+        height:35px;
+        line-height: 36px;
+    }
+    .countdown__amount::after{
+        right:-30%;
+        top:14;
+    }
+    .swiper-button-next,
+    .swiper-button-prev{
+        top:-28px;
+        width:26px;
+        height:26px;
+    }
+    .swiper-button-prev{
+        right:36px;
+    }
+    .account__tab{
+        padding:0.75rem 1rem;
+    }
+    .checkout__group:nth-child(2){
+        padding:1.5rem;
+    }
+    .deals__brand{
+        margin-block: 0.75rem;
+    }
+    .details__price{
+        padding-block: 0.75rem;
+    }
+    .short__description{
+        margin-bottom:1.5rem
+    }
+    .details__color{
+     margin-bottom:2.25rem;
+    }
+    .color__link{
+        width:22px;
+        height:22px;
+    }
+    .size__link{
+        padding:0.375rem 0.625rem;
+    }
+    .details-action{
+        margin-bottom:2.75rem;
+    }
+}
+@media screen and (max-width: 992px){
+    .container{
+        max-width:740px;
+    }
+    .home__container{
+        grid-template-columns: 1fr;
+    }
+    .product__container,
+    .showcase__container{
+        grid-template-columns: repeat(3,1fr);
+    }
+    .table tr th:nth-child(1), .table tr td:nth-child(1),
+.table tr th:nth-child(2), .table tr td:nth-child(2),
+.table tr th:nth-child(3), .table tr td:nth-child(2),
+.table tr th:nth-child(4), .table tr td:nth-child(3),
+.table tr th:nth-child(5), .table tr td:nth-child(4),
+.table tr th:nth-child(6), .table tr td:nth-child(5)
+
+    {
+        width: 80px !important;
+    }
+}
+@media screen and (max-width: 800px){
+    .product__container,
+    .showcase__container,
+    .footer__container,
+    .details__container,
+    #product__related-section{
+        grid-template-columns: repeat(2,1fr);
+    }
+    .newsletter__container,
+    .deals__container,
+    .cart__group,
+    .checkout__container,
+    .accounts__container{
+        grid-template-columns: 1fr;
+    }
+    .newsletter__description{
+        display: none;
+    }
+    .container{
+        max-width:650px;
+    }
+    .home__img{
+        justify-self: center;
+    }
+    .btn{
+        height:45px;
+        line-height: 45px;;
+    }
+    .btn--md{
+        height:42px;
+        line-height: 39px;
+    }
+    .btn--sm{
+        height:38px;
+        line-height: 35px;
+    }
+    .login,
+    .register{
+        padding:1.25rem;
+    }
+   
+
+}
+@media screen and (max-width: 768px){
+    .container{
+        max-width: 560px;
+    }
+     
+}
+@media screen and (max-width: 590px){
+    .container{
+        max-width: 530px;
+    }
+    
+    .showcase__container,
+    .footer__container,
+    .login-register__container,
+    .details__container{
+        grid-template-columns: 100%;
+    }
+    .tab__header,
+    .tab__body{
+        padding:0.75rem;
+    }
+}
+@media screen and (max-width: 510px){
+    .container{
+        max-width: 400px;
+    }
+    .product__container,
+    #product__related-section{
+        grid-template-columns: 100%;
+    }
+    .product__item{
+        width:100%;
+        justify-self: center;
+    }
+    .product__item{
+        max-width: 100%;
+    }
+    .compare__table tr td{
         display: block;
-        overflow-x: auto; 
-        white-space: nowrap;
+    }
+    .category__item{
+        padding-bottom: 1rem;
+    }
+    .category__img{
+        margin-bottom: 1rem;
+    }
+    .deals__item{
+        padding:1.25rem;
+    }
+    .placed__order-table th,
+    .order__table tr th{
+        display: none;
+    }
+    .placed__order-table tr td,
+    .order__table tr td
+    {
+        display: block!important;
+    }
+    .cart__total{
+        padding:1.25rem;
+    }
+    .payment__methods{
+        margin-block: 2.25rem 2.5rem;
+    }
+    .details__tabs{
+        column-gap: 1.25rem;
+        margin:2.5rem;
+    }
+    .review__single{
+        column-gap:1rem;
+    }
+}
+@media screen and (max-width: 510px){
+    .container{
+        max-width: 350px;
+    }
+    #info__table tbody tr th,
+    #info__table tbody tr td{
+        display: block;
+    }
+    .footer__title{
+        margin-top:0.25rem;
+    }
+    .footer__bottom{
+        flex-direction: column;
+        align-items: center;
+    }
+}
+@media screen and (max-width: 350px){
+    .action__btn{
+        width:36px;
+        height:36px;
+        line-height: 38px;
+    }
+    .cart__btn{
+        bottom:1.4rem;
+        right:1.25rem;
+    }
+    .showcase__item{
+        column-gap: 1rem;
+    }
+    .showcase__img{
+        width:70px;
+    }
+    .showcase__container{
+        width:calc(100% - 86px);
+    }
+    .swiper-button-next,
+    .swiper-button-prev{
+        display: none;
+    }
+    .compare__table tr th,
+    .cart__total tr td{
+        display: block;
+    }
+    .form__group {
+        display: block;
     }
 }
