--- a/style.css
+++ b/style.css
@@ -1840,16 +1840,23 @@ font-weight: var(--weight-600);
     .showcase__container{
         grid-template-columns: repeat(3,1fr);
     }
+    .wishlist-addtocart{
+        padding-block: 0;
+        font-size: var(--small-font-size);
+    }
     .table tr th:nth-child(1), .table tr td:nth-child(1),
 .table tr th:nth-child(2), .table tr td:nth-child(2),
 .table tr th:nth-child(3), .table tr td:nth-child(2),
 .table tr th:nth-child(4), .table tr td:nth-child(3),
-.table tr th:nth-child(5), .table tr td:nth-child(4),
+
 .table tr th:nth-child(6), .table tr td:nth-child(5)
 
     {
         width: 80px !important;
     }
+.table tr th:nth-child(5), .table tr td:nth-child(5){
+    width:150px;
+}
 }
 @media screen and (max-width: 800px){
     .product__container,
@@ -1915,6 +1922,12 @@ font-weight: var(--weight-600);
     .tab__body{
         padding:0.75rem;
     }
+    .form__group {
+        display: flex;
+        flex-direction: column;
+        
+    }
+    
 }
 @media screen and (max-width: 510px){
     .container{
@@ -2009,7 +2022,5 @@ font-weight: var(--weight-600);
     .cart__total tr td{
         display: block;
     }
-    .form__group {
-        display: block;
-    }
+    
 }
